MiniPascal/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON uses_section var_section subprogram_section BEGIN statements END DOT
Rule 2     uses_section -> USES uses_list SEMICOLON
Rule 3     uses_section -> empty
Rule 4     uses_list -> uses_list COMMA ID
Rule 5     uses_list -> ID
Rule 6     var_section -> VAR var_declarations
Rule 7     var_section -> empty
Rule 8     var_declarations -> var_declarations var_decl
Rule 9     var_declarations -> var_decl
Rule 10    var_decl -> id_list COLON type SEMICOLON
Rule 11    id_list -> id_list COMMA ID
Rule 12    id_list -> ID
Rule 13    type -> INTEGER
Rule 14    type -> REAL
Rule 15    type -> BOOLEAN
Rule 16    type -> STRING
Rule 17    type -> ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF type
Rule 18    subprogram_section -> subprogram_list
Rule 19    subprogram_section -> empty
Rule 20    subprogram_list -> subprogram_list subprogram_decl
Rule 21    subprogram_list -> subprogram_decl
Rule 22    subprogram_decl -> procedure_decl
Rule 23    subprogram_decl -> function_decl
Rule 24    procedure_decl -> PROCEDURE ID SEMICOLON var_section BEGIN statements END SEMICOLON
Rule 25    function_decl -> FUNCTION ID COLON type SEMICOLON var_section BEGIN statements END SEMICOLON
Rule 26    statements -> statements SEMICOLON statement
Rule 27    statements -> statement
Rule 28    statement -> assignment
Rule 29    statement -> if_statement
Rule 30    statement -> while_statement
Rule 31    statement -> read_statement
Rule 32    statement -> write_statement
Rule 33    statement -> writeln_statement
Rule 34    statement -> call_statement
Rule 35    statement -> compound_statement
Rule 36    statement -> empty
Rule 37    compound_statement -> BEGIN statements END
Rule 38    call_statement -> ID
Rule 39    assignment -> ID ASSIGN expression
Rule 40    if_statement -> IF expression THEN statement
Rule 41    if_statement -> IF expression THEN statement ELSE statement
Rule 42    while_statement -> WHILE expression DO statement
Rule 43    read_statement -> READ LPAREN id_list RPAREN
Rule 44    write_statement -> WRITE LPAREN expr_list RPAREN
Rule 45    writeln_statement -> WRITELN LPAREN expr_list RPAREN
Rule 46    writeln_statement -> WRITELN LPAREN RPAREN
Rule 47    expr_list -> expr_list COMMA expression
Rule 48    expr_list -> expression
Rule 49    expression -> expression PLUS expression
Rule 50    expression -> expression MINUS expression
Rule 51    expression -> expression TIMES expression
Rule 52    expression -> expression DIVIDE expression
Rule 53    expression -> expression EQUAL expression
Rule 54    expression -> expression NOTEQ expression
Rule 55    expression -> expression LESS expression
Rule 56    expression -> expression LESSEQUAL expression
Rule 57    expression -> expression GREATER expression
Rule 58    expression -> expression GREATEREQUAL expression
Rule 59    expression -> MINUS expression
Rule 60    expression -> NOT expression
Rule 61    expression -> LPAREN expression RPAREN
Rule 62    expression -> ID
Rule 63    expression -> NUMBER
Rule 64    expression -> STRLIT
Rule 65    expression -> NEW LPAREN ID RPAREN
Rule 66    expression -> TRUE
Rule 67    expression -> FALSE
Rule 68    empty -> <empty>

Terminals, with rules where they appear

ARRAY                : 17
ASSIGN               : 39
BEGIN                : 1 24 25 37
BOOLEAN              : 15
COLON                : 10 25
COMMA                : 4 11 47
DIVIDE               : 52
DO                   : 42
DOT                  : 1
DOTDOT               : 17
ELSE                 : 41
END                  : 1 24 25 37
EQUAL                : 53
FALSE                : 67
FUNCTION             : 25
GREATER              : 57
GREATEREQUAL         : 58
ID                   : 1 4 5 11 12 24 25 38 39 62 65
IF                   : 40 41
INTEGER              : 13
LBRACKET             : 17
LESS                 : 55
LESSEQUAL            : 56
LPAREN               : 43 44 45 46 61 65
MINUS                : 50 59
NEW                  : 65
NOT                  : 60
NOTEQ                : 54
NUMBER               : 17 17 63
OF                   : 17
PLUS                 : 49
PROCEDURE            : 24
PROGRAM              : 1
RBRACKET             : 17
READ                 : 43
REAL                 : 14
RPAREN               : 43 44 45 46 61 65
SEMICOLON            : 1 2 10 24 24 25 25 26
STRING               : 16
STRLIT               : 64
THEN                 : 40 41
TIMES                : 51
TRUE                 : 66
USES                 : 2
VAR                  : 6
WHILE                : 42
WRITE                : 44
WRITELN              : 45 46
error                : 

Nonterminals, with rules where they appear

assignment           : 28
call_statement       : 34
compound_statement   : 35
empty                : 3 7 19 36
expr_list            : 44 45 47
expression           : 39 40 41 42 47 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 60 61
function_decl        : 23
id_list              : 10 11 43
if_statement         : 29
procedure_decl       : 22
program              : 0
read_statement       : 31
statement            : 26 27 40 41 41 42
statements           : 1 24 25 26 37
subprogram_decl      : 20 21
subprogram_list      : 18 20
subprogram_section   : 1
type                 : 10 17 25
uses_list            : 2 4
uses_section         : 1
var_decl             : 8 9
var_declarations     : 6 8
var_section          : 1 24 25
while_statement      : 30
write_statement      : 32
writeln_statement    : 33

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON uses_section var_section subprogram_section BEGIN statements END DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON uses_section var_section subprogram_section BEGIN statements END DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON uses_section var_section subprogram_section BEGIN statements END DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . uses_section var_section subprogram_section BEGIN statements END DOT
    (2) uses_section -> . USES uses_list SEMICOLON
    (3) uses_section -> . empty
    (68) empty -> .

    USES            shift and go to state 6
    VAR             reduce using rule 68 (empty -> .)
    PROCEDURE       reduce using rule 68 (empty -> .)
    FUNCTION        reduce using rule 68 (empty -> .)
    BEGIN           reduce using rule 68 (empty -> .)

    uses_section                   shift and go to state 5
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID SEMICOLON uses_section . var_section subprogram_section BEGIN statements END DOT
    (6) var_section -> . VAR var_declarations
    (7) var_section -> . empty
    (68) empty -> .

    VAR             shift and go to state 9
    PROCEDURE       reduce using rule 68 (empty -> .)
    FUNCTION        reduce using rule 68 (empty -> .)
    BEGIN           reduce using rule 68 (empty -> .)

    var_section                    shift and go to state 8
    empty                          shift and go to state 10

state 6

    (2) uses_section -> USES . uses_list SEMICOLON
    (4) uses_list -> . uses_list COMMA ID
    (5) uses_list -> . ID

    ID              shift and go to state 12

    uses_list                      shift and go to state 11

state 7

    (3) uses_section -> empty .

    VAR             reduce using rule 3 (uses_section -> empty .)
    PROCEDURE       reduce using rule 3 (uses_section -> empty .)
    FUNCTION        reduce using rule 3 (uses_section -> empty .)
    BEGIN           reduce using rule 3 (uses_section -> empty .)


state 8

    (1) program -> PROGRAM ID SEMICOLON uses_section var_section . subprogram_section BEGIN statements END DOT
    (18) subprogram_section -> . subprogram_list
    (19) subprogram_section -> . empty
    (20) subprogram_list -> . subprogram_list subprogram_decl
    (21) subprogram_list -> . subprogram_decl
    (68) empty -> .
    (22) subprogram_decl -> . procedure_decl
    (23) subprogram_decl -> . function_decl
    (24) procedure_decl -> . PROCEDURE ID SEMICOLON var_section BEGIN statements END SEMICOLON
    (25) function_decl -> . FUNCTION ID COLON type SEMICOLON var_section BEGIN statements END SEMICOLON

    BEGIN           reduce using rule 68 (empty -> .)
    PROCEDURE       shift and go to state 19
    FUNCTION        shift and go to state 20

    subprogram_section             shift and go to state 13
    subprogram_list                shift and go to state 14
    empty                          shift and go to state 15
    subprogram_decl                shift and go to state 16
    procedure_decl                 shift and go to state 17
    function_decl                  shift and go to state 18

state 9

    (6) var_section -> VAR . var_declarations
    (8) var_declarations -> . var_declarations var_decl
    (9) var_declarations -> . var_decl
    (10) var_decl -> . id_list COLON type SEMICOLON
    (11) id_list -> . id_list COMMA ID
    (12) id_list -> . ID

    ID              shift and go to state 24

    var_declarations               shift and go to state 21
    var_decl                       shift and go to state 22
    id_list                        shift and go to state 23

state 10

    (7) var_section -> empty .

    PROCEDURE       reduce using rule 7 (var_section -> empty .)
    FUNCTION        reduce using rule 7 (var_section -> empty .)
    BEGIN           reduce using rule 7 (var_section -> empty .)


state 11

    (2) uses_section -> USES uses_list . SEMICOLON
    (4) uses_list -> uses_list . COMMA ID

    SEMICOLON       shift and go to state 25
    COMMA           shift and go to state 26


state 12

    (5) uses_list -> ID .

    SEMICOLON       reduce using rule 5 (uses_list -> ID .)
    COMMA           reduce using rule 5 (uses_list -> ID .)


state 13

    (1) program -> PROGRAM ID SEMICOLON uses_section var_section subprogram_section . BEGIN statements END DOT

    BEGIN           shift and go to state 27


state 14

    (18) subprogram_section -> subprogram_list .
    (20) subprogram_list -> subprogram_list . subprogram_decl
    (22) subprogram_decl -> . procedure_decl
    (23) subprogram_decl -> . function_decl
    (24) procedure_decl -> . PROCEDURE ID SEMICOLON var_section BEGIN statements END SEMICOLON
    (25) function_decl -> . FUNCTION ID COLON type SEMICOLON var_section BEGIN statements END SEMICOLON

    BEGIN           reduce using rule 18 (subprogram_section -> subprogram_list .)
    PROCEDURE       shift and go to state 19
    FUNCTION        shift and go to state 20

    subprogram_decl                shift and go to state 28
    procedure_decl                 shift and go to state 17
    function_decl                  shift and go to state 18

state 15

    (19) subprogram_section -> empty .

    BEGIN           reduce using rule 19 (subprogram_section -> empty .)


state 16

    (21) subprogram_list -> subprogram_decl .

    PROCEDURE       reduce using rule 21 (subprogram_list -> subprogram_decl .)
    FUNCTION        reduce using rule 21 (subprogram_list -> subprogram_decl .)
    BEGIN           reduce using rule 21 (subprogram_list -> subprogram_decl .)


state 17

    (22) subprogram_decl -> procedure_decl .

    PROCEDURE       reduce using rule 22 (subprogram_decl -> procedure_decl .)
    FUNCTION        reduce using rule 22 (subprogram_decl -> procedure_decl .)
    BEGIN           reduce using rule 22 (subprogram_decl -> procedure_decl .)


state 18

    (23) subprogram_decl -> function_decl .

    PROCEDURE       reduce using rule 23 (subprogram_decl -> function_decl .)
    FUNCTION        reduce using rule 23 (subprogram_decl -> function_decl .)
    BEGIN           reduce using rule 23 (subprogram_decl -> function_decl .)


state 19

    (24) procedure_decl -> PROCEDURE . ID SEMICOLON var_section BEGIN statements END SEMICOLON

    ID              shift and go to state 29


state 20

    (25) function_decl -> FUNCTION . ID COLON type SEMICOLON var_section BEGIN statements END SEMICOLON

    ID              shift and go to state 30


state 21

    (6) var_section -> VAR var_declarations .
    (8) var_declarations -> var_declarations . var_decl
    (10) var_decl -> . id_list COLON type SEMICOLON
    (11) id_list -> . id_list COMMA ID
    (12) id_list -> . ID

    PROCEDURE       reduce using rule 6 (var_section -> VAR var_declarations .)
    FUNCTION        reduce using rule 6 (var_section -> VAR var_declarations .)
    BEGIN           reduce using rule 6 (var_section -> VAR var_declarations .)
    ID              shift and go to state 24

    var_decl                       shift and go to state 31
    id_list                        shift and go to state 23

state 22

    (9) var_declarations -> var_decl .

    ID              reduce using rule 9 (var_declarations -> var_decl .)
    PROCEDURE       reduce using rule 9 (var_declarations -> var_decl .)
    FUNCTION        reduce using rule 9 (var_declarations -> var_decl .)
    BEGIN           reduce using rule 9 (var_declarations -> var_decl .)


state 23

    (10) var_decl -> id_list . COLON type SEMICOLON
    (11) id_list -> id_list . COMMA ID

    COLON           shift and go to state 32
    COMMA           shift and go to state 33


state 24

    (12) id_list -> ID .

    COLON           reduce using rule 12 (id_list -> ID .)
    COMMA           reduce using rule 12 (id_list -> ID .)
    RPAREN          reduce using rule 12 (id_list -> ID .)


state 25

    (2) uses_section -> USES uses_list SEMICOLON .

    VAR             reduce using rule 2 (uses_section -> USES uses_list SEMICOLON .)
    PROCEDURE       reduce using rule 2 (uses_section -> USES uses_list SEMICOLON .)
    FUNCTION        reduce using rule 2 (uses_section -> USES uses_list SEMICOLON .)
    BEGIN           reduce using rule 2 (uses_section -> USES uses_list SEMICOLON .)


state 26

    (4) uses_list -> uses_list COMMA . ID

    ID              shift and go to state 34


state 27

    (1) program -> PROGRAM ID SEMICOLON uses_section var_section subprogram_section BEGIN . statements END DOT
    (26) statements -> . statements SEMICOLON statement
    (27) statements -> . statement
    (28) statement -> . assignment
    (29) statement -> . if_statement
    (30) statement -> . while_statement
    (31) statement -> . read_statement
    (32) statement -> . write_statement
    (33) statement -> . writeln_statement
    (34) statement -> . call_statement
    (35) statement -> . compound_statement
    (36) statement -> . empty
    (39) assignment -> . ID ASSIGN expression
    (40) if_statement -> . IF expression THEN statement
    (41) if_statement -> . IF expression THEN statement ELSE statement
    (42) while_statement -> . WHILE expression DO statement
    (43) read_statement -> . READ LPAREN id_list RPAREN
    (44) write_statement -> . WRITE LPAREN expr_list RPAREN
    (45) writeln_statement -> . WRITELN LPAREN expr_list RPAREN
    (46) writeln_statement -> . WRITELN LPAREN RPAREN
    (38) call_statement -> . ID
    (37) compound_statement -> . BEGIN statements END
    (68) empty -> .

    ID              shift and go to state 35
    IF              shift and go to state 48
    WHILE           shift and go to state 49
    READ            shift and go to state 50
    WRITE           shift and go to state 51
    WRITELN         shift and go to state 52
    BEGIN           shift and go to state 36
    END             reduce using rule 68 (empty -> .)
    SEMICOLON       reduce using rule 68 (empty -> .)

    statements                     shift and go to state 37
    statement                      shift and go to state 38
    assignment                     shift and go to state 39
    if_statement                   shift and go to state 40
    while_statement                shift and go to state 41
    read_statement                 shift and go to state 42
    write_statement                shift and go to state 43
    writeln_statement              shift and go to state 44
    call_statement                 shift and go to state 45
    compound_statement             shift and go to state 46
    empty                          shift and go to state 47

state 28

    (20) subprogram_list -> subprogram_list subprogram_decl .

    PROCEDURE       reduce using rule 20 (subprogram_list -> subprogram_list subprogram_decl .)
    FUNCTION        reduce using rule 20 (subprogram_list -> subprogram_list subprogram_decl .)
    BEGIN           reduce using rule 20 (subprogram_list -> subprogram_list subprogram_decl .)


state 29

    (24) procedure_decl -> PROCEDURE ID . SEMICOLON var_section BEGIN statements END SEMICOLON

    SEMICOLON       shift and go to state 53


state 30

    (25) function_decl -> FUNCTION ID . COLON type SEMICOLON var_section BEGIN statements END SEMICOLON

    COLON           shift and go to state 54


state 31

    (8) var_declarations -> var_declarations var_decl .

    ID              reduce using rule 8 (var_declarations -> var_declarations var_decl .)
    PROCEDURE       reduce using rule 8 (var_declarations -> var_declarations var_decl .)
    FUNCTION        reduce using rule 8 (var_declarations -> var_declarations var_decl .)
    BEGIN           reduce using rule 8 (var_declarations -> var_declarations var_decl .)


state 32

    (10) var_decl -> id_list COLON . type SEMICOLON
    (13) type -> . INTEGER
    (14) type -> . REAL
    (15) type -> . BOOLEAN
    (16) type -> . STRING
    (17) type -> . ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF type

    INTEGER         shift and go to state 56
    REAL            shift and go to state 57
    BOOLEAN         shift and go to state 58
    STRING          shift and go to state 59
    ARRAY           shift and go to state 60

    type                           shift and go to state 55

state 33

    (11) id_list -> id_list COMMA . ID

    ID              shift and go to state 61


state 34

    (4) uses_list -> uses_list COMMA ID .

    SEMICOLON       reduce using rule 4 (uses_list -> uses_list COMMA ID .)
    COMMA           reduce using rule 4 (uses_list -> uses_list COMMA ID .)


state 35

    (39) assignment -> ID . ASSIGN expression
    (38) call_statement -> ID .

    ASSIGN          shift and go to state 62
    END             reduce using rule 38 (call_statement -> ID .)
    SEMICOLON       reduce using rule 38 (call_statement -> ID .)
    ELSE            reduce using rule 38 (call_statement -> ID .)


state 36

    (37) compound_statement -> BEGIN . statements END
    (26) statements -> . statements SEMICOLON statement
    (27) statements -> . statement
    (28) statement -> . assignment
    (29) statement -> . if_statement
    (30) statement -> . while_statement
    (31) statement -> . read_statement
    (32) statement -> . write_statement
    (33) statement -> . writeln_statement
    (34) statement -> . call_statement
    (35) statement -> . compound_statement
    (36) statement -> . empty
    (39) assignment -> . ID ASSIGN expression
    (40) if_statement -> . IF expression THEN statement
    (41) if_statement -> . IF expression THEN statement ELSE statement
    (42) while_statement -> . WHILE expression DO statement
    (43) read_statement -> . READ LPAREN id_list RPAREN
    (44) write_statement -> . WRITE LPAREN expr_list RPAREN
    (45) writeln_statement -> . WRITELN LPAREN expr_list RPAREN
    (46) writeln_statement -> . WRITELN LPAREN RPAREN
    (38) call_statement -> . ID
    (37) compound_statement -> . BEGIN statements END
    (68) empty -> .

    ID              shift and go to state 35
    IF              shift and go to state 48
    WHILE           shift and go to state 49
    READ            shift and go to state 50
    WRITE           shift and go to state 51
    WRITELN         shift and go to state 52
    BEGIN           shift and go to state 36
    END             reduce using rule 68 (empty -> .)
    SEMICOLON       reduce using rule 68 (empty -> .)

    statements                     shift and go to state 63
    statement                      shift and go to state 38
    assignment                     shift and go to state 39
    if_statement                   shift and go to state 40
    while_statement                shift and go to state 41
    read_statement                 shift and go to state 42
    write_statement                shift and go to state 43
    writeln_statement              shift and go to state 44
    call_statement                 shift and go to state 45
    compound_statement             shift and go to state 46
    empty                          shift and go to state 47

state 37

    (1) program -> PROGRAM ID SEMICOLON uses_section var_section subprogram_section BEGIN statements . END DOT
    (26) statements -> statements . SEMICOLON statement

    END             shift and go to state 65
    SEMICOLON       shift and go to state 64


state 38

    (27) statements -> statement .

    END             reduce using rule 27 (statements -> statement .)
    SEMICOLON       reduce using rule 27 (statements -> statement .)


state 39

    (28) statement -> assignment .

    END             reduce using rule 28 (statement -> assignment .)
    SEMICOLON       reduce using rule 28 (statement -> assignment .)
    ELSE            reduce using rule 28 (statement -> assignment .)


state 40

    (29) statement -> if_statement .

    END             reduce using rule 29 (statement -> if_statement .)
    SEMICOLON       reduce using rule 29 (statement -> if_statement .)
    ELSE            reduce using rule 29 (statement -> if_statement .)


state 41

    (30) statement -> while_statement .

    END             reduce using rule 30 (statement -> while_statement .)
    SEMICOLON       reduce using rule 30 (statement -> while_statement .)
    ELSE            reduce using rule 30 (statement -> while_statement .)


state 42

    (31) statement -> read_statement .

    END             reduce using rule 31 (statement -> read_statement .)
    SEMICOLON       reduce using rule 31 (statement -> read_statement .)
    ELSE            reduce using rule 31 (statement -> read_statement .)


state 43

    (32) statement -> write_statement .

    END             reduce using rule 32 (statement -> write_statement .)
    SEMICOLON       reduce using rule 32 (statement -> write_statement .)
    ELSE            reduce using rule 32 (statement -> write_statement .)


state 44

    (33) statement -> writeln_statement .

    END             reduce using rule 33 (statement -> writeln_statement .)
    SEMICOLON       reduce using rule 33 (statement -> writeln_statement .)
    ELSE            reduce using rule 33 (statement -> writeln_statement .)


state 45

    (34) statement -> call_statement .

    END             reduce using rule 34 (statement -> call_statement .)
    SEMICOLON       reduce using rule 34 (statement -> call_statement .)
    ELSE            reduce using rule 34 (statement -> call_statement .)


state 46

    (35) statement -> compound_statement .

    END             reduce using rule 35 (statement -> compound_statement .)
    SEMICOLON       reduce using rule 35 (statement -> compound_statement .)
    ELSE            reduce using rule 35 (statement -> compound_statement .)


state 47

    (36) statement -> empty .

    END             reduce using rule 36 (statement -> empty .)
    SEMICOLON       reduce using rule 36 (statement -> empty .)
    ELSE            reduce using rule 36 (statement -> empty .)


state 48

    (40) if_statement -> IF . expression THEN statement
    (41) if_statement -> IF . expression THEN statement ELSE statement
    (49) expression -> . expression PLUS expression
    (50) expression -> . expression MINUS expression
    (51) expression -> . expression TIMES expression
    (52) expression -> . expression DIVIDE expression
    (53) expression -> . expression EQUAL expression
    (54) expression -> . expression NOTEQ expression
    (55) expression -> . expression LESS expression
    (56) expression -> . expression LESSEQUAL expression
    (57) expression -> . expression GREATER expression
    (58) expression -> . expression GREATEREQUAL expression
    (59) expression -> . MINUS expression
    (60) expression -> . NOT expression
    (61) expression -> . LPAREN expression RPAREN
    (62) expression -> . ID
    (63) expression -> . NUMBER
    (64) expression -> . STRLIT
    (65) expression -> . NEW LPAREN ID RPAREN
    (66) expression -> . TRUE
    (67) expression -> . FALSE

    MINUS           shift and go to state 67
    NOT             shift and go to state 68
    LPAREN          shift and go to state 69
    ID              shift and go to state 70
    NUMBER          shift and go to state 71
    STRLIT          shift and go to state 72
    NEW             shift and go to state 73
    TRUE            shift and go to state 74
    FALSE           shift and go to state 75

    expression                     shift and go to state 66

state 49

    (42) while_statement -> WHILE . expression DO statement
    (49) expression -> . expression PLUS expression
    (50) expression -> . expression MINUS expression
    (51) expression -> . expression TIMES expression
    (52) expression -> . expression DIVIDE expression
    (53) expression -> . expression EQUAL expression
    (54) expression -> . expression NOTEQ expression
    (55) expression -> . expression LESS expression
    (56) expression -> . expression LESSEQUAL expression
    (57) expression -> . expression GREATER expression
    (58) expression -> . expression GREATEREQUAL expression
    (59) expression -> . MINUS expression
    (60) expression -> . NOT expression
    (61) expression -> . LPAREN expression RPAREN
    (62) expression -> . ID
    (63) expression -> . NUMBER
    (64) expression -> . STRLIT
    (65) expression -> . NEW LPAREN ID RPAREN
    (66) expression -> . TRUE
    (67) expression -> . FALSE

    MINUS           shift and go to state 67
    NOT             shift and go to state 68
    LPAREN          shift and go to state 69
    ID              shift and go to state 70
    NUMBER          shift and go to state 71
    STRLIT          shift and go to state 72
    NEW             shift and go to state 73
    TRUE            shift and go to state 74
    FALSE           shift and go to state 75

    expression                     shift and go to state 76

state 50

    (43) read_statement -> READ . LPAREN id_list RPAREN

    LPAREN          shift and go to state 77


state 51

    (44) write_statement -> WRITE . LPAREN expr_list RPAREN

    LPAREN          shift and go to state 78


state 52

    (45) writeln_statement -> WRITELN . LPAREN expr_list RPAREN
    (46) writeln_statement -> WRITELN . LPAREN RPAREN

    LPAREN          shift and go to state 79


state 53

    (24) procedure_decl -> PROCEDURE ID SEMICOLON . var_section BEGIN statements END SEMICOLON
    (6) var_section -> . VAR var_declarations
    (7) var_section -> . empty
    (68) empty -> .

    VAR             shift and go to state 9
    BEGIN           reduce using rule 68 (empty -> .)

    var_section                    shift and go to state 80
    empty                          shift and go to state 10

state 54

    (25) function_decl -> FUNCTION ID COLON . type SEMICOLON var_section BEGIN statements END SEMICOLON
    (13) type -> . INTEGER
    (14) type -> . REAL
    (15) type -> . BOOLEAN
    (16) type -> . STRING
    (17) type -> . ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF type

    INTEGER         shift and go to state 56
    REAL            shift and go to state 57
    BOOLEAN         shift and go to state 58
    STRING          shift and go to state 59
    ARRAY           shift and go to state 60

    type                           shift and go to state 81

state 55

    (10) var_decl -> id_list COLON type . SEMICOLON

    SEMICOLON       shift and go to state 82


state 56

    (13) type -> INTEGER .

    SEMICOLON       reduce using rule 13 (type -> INTEGER .)


state 57

    (14) type -> REAL .

    SEMICOLON       reduce using rule 14 (type -> REAL .)


state 58

    (15) type -> BOOLEAN .

    SEMICOLON       reduce using rule 15 (type -> BOOLEAN .)


state 59

    (16) type -> STRING .

    SEMICOLON       reduce using rule 16 (type -> STRING .)


state 60

    (17) type -> ARRAY . LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF type

    LBRACKET        shift and go to state 83


state 61

    (11) id_list -> id_list COMMA ID .

    COLON           reduce using rule 11 (id_list -> id_list COMMA ID .)
    COMMA           reduce using rule 11 (id_list -> id_list COMMA ID .)
    RPAREN          reduce using rule 11 (id_list -> id_list COMMA ID .)


state 62

    (39) assignment -> ID ASSIGN . expression
    (49) expression -> . expression PLUS expression
    (50) expression -> . expression MINUS expression
    (51) expression -> . expression TIMES expression
    (52) expression -> . expression DIVIDE expression
    (53) expression -> . expression EQUAL expression
    (54) expression -> . expression NOTEQ expression
    (55) expression -> . expression LESS expression
    (56) expression -> . expression LESSEQUAL expression
    (57) expression -> . expression GREATER expression
    (58) expression -> . expression GREATEREQUAL expression
    (59) expression -> . MINUS expression
    (60) expression -> . NOT expression
    (61) expression -> . LPAREN expression RPAREN
    (62) expression -> . ID
    (63) expression -> . NUMBER
    (64) expression -> . STRLIT
    (65) expression -> . NEW LPAREN ID RPAREN
    (66) expression -> . TRUE
    (67) expression -> . FALSE

    MINUS           shift and go to state 67
    NOT             shift and go to state 68
    LPAREN          shift and go to state 69
    ID              shift and go to state 70
    NUMBER          shift and go to state 71
    STRLIT          shift and go to state 72
    NEW             shift and go to state 73
    TRUE            shift and go to state 74
    FALSE           shift and go to state 75

    expression                     shift and go to state 84

state 63

    (37) compound_statement -> BEGIN statements . END
    (26) statements -> statements . SEMICOLON statement

    END             shift and go to state 85
    SEMICOLON       shift and go to state 64


state 64

    (26) statements -> statements SEMICOLON . statement
    (28) statement -> . assignment
    (29) statement -> . if_statement
    (30) statement -> . while_statement
    (31) statement -> . read_statement
    (32) statement -> . write_statement
    (33) statement -> . writeln_statement
    (34) statement -> . call_statement
    (35) statement -> . compound_statement
    (36) statement -> . empty
    (39) assignment -> . ID ASSIGN expression
    (40) if_statement -> . IF expression THEN statement
    (41) if_statement -> . IF expression THEN statement ELSE statement
    (42) while_statement -> . WHILE expression DO statement
    (43) read_statement -> . READ LPAREN id_list RPAREN
    (44) write_statement -> . WRITE LPAREN expr_list RPAREN
    (45) writeln_statement -> . WRITELN LPAREN expr_list RPAREN
    (46) writeln_statement -> . WRITELN LPAREN RPAREN
    (38) call_statement -> . ID
    (37) compound_statement -> . BEGIN statements END
    (68) empty -> .

    ID              shift and go to state 35
    IF              shift and go to state 48
    WHILE           shift and go to state 49
    READ            shift and go to state 50
    WRITE           shift and go to state 51
    WRITELN         shift and go to state 52
    BEGIN           shift and go to state 36
    END             reduce using rule 68 (empty -> .)
    SEMICOLON       reduce using rule 68 (empty -> .)

    statement                      shift and go to state 86
    assignment                     shift and go to state 39
    if_statement                   shift and go to state 40
    while_statement                shift and go to state 41
    read_statement                 shift and go to state 42
    write_statement                shift and go to state 43
    writeln_statement              shift and go to state 44
    call_statement                 shift and go to state 45
    compound_statement             shift and go to state 46
    empty                          shift and go to state 47

state 65

    (1) program -> PROGRAM ID SEMICOLON uses_section var_section subprogram_section BEGIN statements END . DOT

    DOT             shift and go to state 87


state 66

    (40) if_statement -> IF expression . THEN statement
    (41) if_statement -> IF expression . THEN statement ELSE statement
    (49) expression -> expression . PLUS expression
    (50) expression -> expression . MINUS expression
    (51) expression -> expression . TIMES expression
    (52) expression -> expression . DIVIDE expression
    (53) expression -> expression . EQUAL expression
    (54) expression -> expression . NOTEQ expression
    (55) expression -> expression . LESS expression
    (56) expression -> expression . LESSEQUAL expression
    (57) expression -> expression . GREATER expression
    (58) expression -> expression . GREATEREQUAL expression

    THEN            shift and go to state 88
    PLUS            shift and go to state 89
    MINUS           shift and go to state 90
    TIMES           shift and go to state 91
    DIVIDE          shift and go to state 92
    EQUAL           shift and go to state 93
    NOTEQ           shift and go to state 94
    LESS            shift and go to state 95
    LESSEQUAL       shift and go to state 96
    GREATER         shift and go to state 97
    GREATEREQUAL    shift and go to state 98


state 67

    (59) expression -> MINUS . expression
    (49) expression -> . expression PLUS expression
    (50) expression -> . expression MINUS expression
    (51) expression -> . expression TIMES expression
    (52) expression -> . expression DIVIDE expression
    (53) expression -> . expression EQUAL expression
    (54) expression -> . expression NOTEQ expression
    (55) expression -> . expression LESS expression
    (56) expression -> . expression LESSEQUAL expression
    (57) expression -> . expression GREATER expression
    (58) expression -> . expression GREATEREQUAL expression
    (59) expression -> . MINUS expression
    (60) expression -> . NOT expression
    (61) expression -> . LPAREN expression RPAREN
    (62) expression -> . ID
    (63) expression -> . NUMBER
    (64) expression -> . STRLIT
    (65) expression -> . NEW LPAREN ID RPAREN
    (66) expression -> . TRUE
    (67) expression -> . FALSE

    MINUS           shift and go to state 67
    NOT             shift and go to state 68
    LPAREN          shift and go to state 69
    ID              shift and go to state 70
    NUMBER          shift and go to state 71
    STRLIT          shift and go to state 72
    NEW             shift and go to state 73
    TRUE            shift and go to state 74
    FALSE           shift and go to state 75

    expression                     shift and go to state 99

state 68

    (60) expression -> NOT . expression
    (49) expression -> . expression PLUS expression
    (50) expression -> . expression MINUS expression
    (51) expression -> . expression TIMES expression
    (52) expression -> . expression DIVIDE expression
    (53) expression -> . expression EQUAL expression
    (54) expression -> . expression NOTEQ expression
    (55) expression -> . expression LESS expression
    (56) expression -> . expression LESSEQUAL expression
    (57) expression -> . expression GREATER expression
    (58) expression -> . expression GREATEREQUAL expression
    (59) expression -> . MINUS expression
    (60) expression -> . NOT expression
    (61) expression -> . LPAREN expression RPAREN
    (62) expression -> . ID
    (63) expression -> . NUMBER
    (64) expression -> . STRLIT
    (65) expression -> . NEW LPAREN ID RPAREN
    (66) expression -> . TRUE
    (67) expression -> . FALSE

    MINUS           shift and go to state 67
    NOT             shift and go to state 68
    LPAREN          shift and go to state 69
    ID              shift and go to state 70
    NUMBER          shift and go to state 71
    STRLIT          shift and go to state 72
    NEW             shift and go to state 73
    TRUE            shift and go to state 74
    FALSE           shift and go to state 75

    expression                     shift and go to state 100

state 69
